skeleton of mousover event listener... still very much WIP

--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
     height: 50px;
     width: 50px;
     color: blue;
-    background-color: pink;
+   
 }
 
-.active {
+.activeMouse {
     background-color: green;
 }
