--- a/style.css
+++ b/style.css
@@ -1,18 +1,32 @@
+body{
+    background-color: white;
+}
 .rowDiv{
     margin: 0px;
     padding: 0px;
-    height: 50px;
+    height: 20px;
    
 }
 .squareDiv{
     margin: 0px;
     padding: 0px;
-    height: 50px;
-    width: 50px;
+    height: 20px;
+    width: 20px;
     color: blue;
    
 }
 
-.activeMouse {
-    background-color: green;
+.activeMouseBlack {
+    background-color: black;
 }
+
+.activeMouseDarker {
+    background-color: green;
+    opacity: +=0%;
+    color:  pink;
+}
+
+.activeMouseColor {
+    background-color:  pink;
+}
+
