--- a/style.css
+++ b/style.css
@@ -15,7 +15,14 @@ body{
     color: blue;
    
 }
-
+#container{
+    width: 320px;
+    border-color: black;
+    display: block;
+    border-style: solid;
+    border-width: 2px;
+    margin: auto;
+}
 .activeMouseBlack {
     background-color: black;
 }
