--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ button{
     width: 60px;
     border-radius: 50%;
     border-width: 3px;
-    margin: 5px;
     border-color: grey;
+    margin: 0px 20px 0px 20px;
 }
 #controls{
     text-align: center;
@@ -43,6 +43,20 @@ button{
     display: block;
     border-style: solid;
     border-width: 2px;
+    background-color: white;
+}
+#border{
+    background-color: red;
+    padding: 20px 80px 30px 80px;
+    width: fit-content;
+    border-color: darkred;
+    border-width: 5px;
+    border-style: solid;
+    border-top-color: darkred;
+    border-left-color: pink;
+    border-right-color: pink;
+    border-bottom-color: darkred;
+    margin: auto;
 }
 .activeMouseBlack {
     background-color: black;
